fixed middle of services page on mobile

--- a/codebase/static/css/services.css
+++ b/codebase/static/css/services.css
@@ -108,4 +108,13 @@
   .proj-structure-pic {
       width:100%;
   }
+
+  .services-boxes {
+      flex-direction: column;
+  }
+
+  .services-content {
+      margin-left: 0px;
+      margin-right: 0px;
+  }
 }
